Added photo to home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Julianna Sells- Portfolio</h1>
 <p>I am a Graphic Designer based in South Alabama/ Pensacola Florida.
 I hope to display my work to future employers here. </p>
+<img src="julianna.JPG" alt="julianna in sunglasses" width="300" height="400">
 <a href="gifshowcase.html">gifshowcase</a>
 <a href="page2.html">page2</a>
 <a href="page3.html">page3</a>
