added net.art project and links

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@ I hope to display my work to future employers here. </p>
 <a href="gifshowcase.html">gifshowcase</a>
 <a href="page2.html">page2</a>
 <a href="page3.html">page3</a>
+<a href="net.art1.html">net.art1</a>
+<a href="net.art2.html">net.art2</a>
+<a href="net.art3.html">net.art3</a>
 </body>
 </html>
