added story assignment and links

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@ I hope to display my work to future employers here. </p>
 <a href="net.art1.html">net.art1</a>
 <a href="net.art2.html">net.art2</a>
 <a href="net.art3.html">net.art3</a>
+<a href="story-pt.1.html">story assignment</a>
 </body>
 </html>
