--- a/net.art2.html
+++ b/net.art2.html
@@ -48,7 +48,7 @@
 <body>
 <div class="parent">
     <a href="index.html">
-        <img class="lace" src="img/collagematerials/lace-02.gif">
+        <img class="lace" src="img/collagematerials/lace-02.gif" alt="lace">
     </a>
     <a href="net.art1.html">
         <img class="woman" src="img/collagematerials/sad%20woman.png">
