--- a/story-pt.6.html
+++ b/story-pt.6.html
@@ -60,15 +60,13 @@
     Hello... i've never seen you here before.
 </p>
 <p class="text2">
-    Oh, I dont come here often...
+    Oh, I dont come <a href="index.html"> here </a> often...
 </p>
 <p class="text3">
-    Well since you are here, I hope you enjoy this piece. I made it myself.
+    Well since you are here, I hope you enjoy this piece. I <a href="story-pt.7.html">made it myself. </a>
 </p>
 <div class="parent">
-    <a href="index.html">
     <img class="head" src="img/storymaterials/bust.png" alt="a bust resembling a man">
-    </a>
     <a href="story-pt.7.html">
     <img class="bench" src="img/storymaterials/peopleonbench.png" alt="a man and woman on a bench">
     </a>
