edited links and fixed text

--- a/story-pt.2.html
+++ b/story-pt.2.html
@@ -30,8 +30,9 @@
             font-family: Georgia, serif;
             font-size: 2em;
             color: black;
-            top: 40%;
+            top: 60%;
             left: 40%;
+            z-index: 1000;
         }
     </style>
 </head>
