--- a/story-pt.8.html
+++ b/story-pt.8.html
@@ -50,8 +50,9 @@
     for plagiarism
 </p>
 <div class="parent">
-    <a href="index.html"
-    <img class="man" src="img/storymaterials/newspaperman.png" alt="newspaper man">>
+    <a href="index.html">
+    <img class="man" src="img/storymaterials/newspaperman.png" alt="newspaper man">
+    </a>
     <img class="woman" src="img/storymaterials/womanwithhands.png" alt="woman with hands on hair">
 </div>
 </body>
