--- a/story-pt.6.html
+++ b/story-pt.6.html
@@ -11,6 +11,7 @@
             position: relative;
             width: 100%;
             height: 100vh;
+            pointer-events: none;
         }
         .bench {
             position: absolute;
