Added link to index

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ I hope to display my work to future employers here. </p>
 <a href="net.art2.html">net.art2</a>
 <a href="net.art3.html">net.art3</a>
 <a href="story-pt.1.html">story assignment</a>
+and <a href="p5-landscape.html">p5 Landscape</a>
 </body>
 </html>
